loading form abalone2.data and wrote some notes on what is wrong with what I did.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /cellular-automata
 /data/#abalone.names#
 /data/transform_abalone.py~
+/documentation/notes.org~
+/documentation/notes.pdf
+/documentation/notes.tex
+/documentation/notes.tex~
