Wrote more of report and modified code to take files and command line as input

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@
 /report/report2.pdf
 /report/moores_8640a89f5d0342f9416f8c47d5c724461bea5c0b.png
 /report/von_neumann_ab5c418829cc89af521a5f035cd3478a1d0ab63a.png
+/report/class_regions_diagram_bc9e4f4bc7b51762618d651c221a4835f96f0fdf.png
+/report/moores_diagram_474d0b586f0a94e26fa43bb9b09b0ac8bdff3a3e.png
+/report/rules_definitions_1cf181b24b965cf1ce82e1e5d169e6b91c4b274f.png
+/report/von_neumann_diagram_ab5c418829cc89af521a5f035cd3478a1d0ab63a.png
+/report/voting_system_507d53b21e0243a73f2c94969b15163b293e6330.png
