Modified programme, and transform script. Wrote script to run all this.
Reorganised the programme to accept 3 input files. the first being the
grid definitions, then training data, and finally the test data.

Modified transform_abalone.py to accept a single integer input, which
determines the size of testing data by taking 1/input as the number of
pieces to use, I changed this for the last test run I did so that the
number is the size of the training data instead. 1/input of the data
is training data. Renamed to transform.py.

Wrote a script (run.sh to run first the transform.py with different
input values, then the programme, using these resulting files as its
training and testing data.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@
 /report/rules_definitions_1cf181b24b965cf1ce82e1e5d169e6b91c4b274f.png
 /report/von_neumann_diagram_ab5c418829cc89af521a5f035cd3478a1d0ab63a.png
 /report/voting_system_507d53b21e0243a73f2c94969b15163b293e6330.png
+/report/moores_diagram_8640a89f5d0342f9416f8c47d5c724461bea5c0b.png
+/report/rules_definitions_1bfc803defc59585a03e21a155053b5f02586555.png
+/report/von_neumann_diagram_080a889efe2d78ae7645766c96832046b0d4991c.png
+/report/voting_system_ae3ce08149a1da921b6942095a190b29c67f4f68.png
