--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,12 @@
 /report/rules_definitions_1bfc803defc59585a03e21a155053b5f02586555.png
 /report/von_neumann_diagram_080a889efe2d78ae7645766c96832046b0d4991c.png
 /report/voting_system_ae3ce08149a1da921b6942095a190b29c67f4f68.png
+/data/#iris.names#
+/data/.#iris.names
+/data/abalone_definition.txt
+/data/abalone_test.txt
+/data/abalone_train.txt
+/data/iris_definition.txt
+/data/iris_test.txt
+/data/iris_train.txt
+/report/report.log
